<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
  <TextView  
   android:layout_width="fill_parent" 
   android:layout_height="wrap_content" 
   android:text="@string/server_intr_title"
   android:textColor="@color/solid_blue"
   /> 
	<TextView  
	android:id="@+id/busi_content"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_marginLeft="10px"
    android:layout_marginRight="10px"
    />
	<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/server_combo_title"
    android:textColor="@color/solid_blue"
    /> 
 <ListView
 	android:id="@+id/combo_list"
 	android:choiceMode="singleChoice"
 	android:layout_width="fill_parent"
	 android:layout_height="300px"
 	/>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    >	
    <Button
    	 android:id="@+id/combo_ok"
    	 android:layout_width="150px"
   		 android:layout_height="wrap_content"
   		 android:layout_marginLeft="7px"
   		 android:layout_marginRight="7px"
    	 android:text="@string/alert_dialog_ok"
    />
    <Button
    	 android:id="@+id/combo_cancel"
    	 android:layout_width="150px"
   		 android:layout_height="wrap_content"
   		 android:layout_marginLeft="7px"
   		 android:layout_marginRight="7px"
    	 android:text="@string/alert_dialog_cancel"
    />
 </LinearLayout>	
</LinearLayout>
