<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400px"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView 
        android:id="@+id/start_str"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/alert_dialog_phone"
        android:gravity="left"/>
            
    <EditText
        android:id="@+id/start_edit"
        android:inputType ="number"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:scrollHorizontally="true"
        android:autoText="false"
        android:capitalize="none"
        android:gravity="fill_horizontal" />
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	 android:layout_width="fill_parent"
    	 android:layout_height="wrap_content"
    	 android:gravity="center_horizontal"
    	 android:orientation="horizontal">
    	 
    	 <Button
	    	android:id="@+id/start_ok"
	    	android:layout_height="60dip"
	        android:layout_width="100dip"
	    	android:text="@string/alert_dialog_ok"
	    	android:layout_marginLeft="20dip"
	    	android:layout_marginRight="20dip"
	    	android:layout_marginTop="10dip"
	     />
	     
	    <Button
	    	android:id="@+id/start_cancel"
	    	android:layout_height="60px"
	        android:layout_width="100px"
	    	android:text="@string/alert_dialog_cancel"
	    	android:layout_marginLeft="20dip"
	    	android:layout_marginRight="20dip"
	    	android:layout_marginTop="10dip"
	     />
    </LinearLayout>   
   
    
</LinearLayout>